# smileymath

./: .gitignore  README.md  setup.cfg
example/: mymath-gui.py
examples/: ce1_mymath  cm1_mymath  mymath
src/mymath/: ascii_animals.py  ascii_fig.py  ascii_harry_potter.py  ascii_starwars.py  challenge.py  gui.py  mymath.py  practice.py  user_input.py
src/mymath/ascii_data/: harry_potter.py  star_wars.py
src/smileymath/: ascii_fig.py  challenge.py  gui.py  user_input.py
src/smileymath/ascii_data/: animals.py
src/smileymath/cli/: smileymath.py
