[metadata]
name = mymath
version = 0.0.1
author = Daniel Migault
author_email = mglt.biz@gmail.com
description = "Test elementary arithmetic operations"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglt/mymath
project_urls =
    Bug Tracker = https://github.com/mglt/mymath/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.8

#include_package_data=True

[options.packages.find]
where = src
